# Fugent_Model

./: LICENSE  README.md  pyproject.toml
src/fugent_model/: __main__.py  environment.py  model.py  requirements.txt  run.py  train.py
